CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)


SET (APP_INCLUDE_DIRS CACHE INTERNAL "The list of include folders to search for the app.")
SET (APP_LIBS CACHE INTERNAL "The list of libraries that the app should link against.")

SET (APP_INCLUDE_DIRS ${APP_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET (APP_INCLUDE_DIRS ${APP_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR}/include)

SET (APP_LIBS ${APP_LIBS} gmCore)
SET (APP_LIBS ${APP_LIBS} gmTrack)


FIND_PACKAGE (TCLAP REQUIRED)
IF (TCLAP_FOUND)
  SET (APP_INCLUDE_DIRS ${APP_INCLUDE_DIRS} ${TCLAP_INCLUDE_DIRS})
ENDIF ()

FIND_PACKAGE(Threads REQUIRED)
IF (Threads_FOUND)
  SET (APP_LIBS ${APP_LIBS} ${CMAKE_THREAD_LIBS_INIT})
ENDIF ()


ADD_EXECUTABLE(gm-track-base
  src/base.cpp
  src/BaseEstimator.cpp)

TARGET_INCLUDE_DIRECTORIES(gm-track-base PUBLIC ${APP_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(gm-track-base ${APP_LIBS})

SET_PROPERTY(TARGET gm-track-base PROPERTY CXX_STANDARD 14)
