CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)


SET (MODULE_INCLUDE_DIRS CACHE INTERNAL "The list of include folders to search for the config module.")
SET (MODULE_LIBS CACHE INTERNAL "The list of libraries that the config module should link against.")

SET (MODULE_INCLUDE_DIRS ${MODULE_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET (MODULE_INCLUDE_DIRS ${MODULE_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR}/include)


FIND_PACKAGE(TinyXML2 REQUIRED)
SET (MODULE_INCLUDE_DIRS ${MODULE_INCLUDE_DIRS} ${TinyXML2_INCLUDE_DIRS})
SET (MODULE_LIBS ${MODULE_LIBS} ${TinyXML2_LIBRARIES})


CONFIGURE_FILE(
  ${CMAKE_CURRENT_SOURCE_DIR}/include/gmConfig/config_cmake.hh
  ${CMAKE_CURRENT_BINARY_DIR}/include/gmConfig/config.hh)


ADD_LIBRARY(gmConfig SHARED
  src/ImportLibrary.cpp
  src/Configuration.cpp
  src/OFactory.cpp
  )

TARGET_INCLUDE_DIRECTORIES(gmConfig PUBLIC ${MODULE_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(gmConfig ${MODULE_LIBS})

SET_PROPERTY(TARGET gmConfig PROPERTY CXX_STANDARD 14)
